smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/isa-missing-type.smithy
// Parse error at line 4, column 15 near `Baz`: Expected either `isa` or `{`
namespace smithy.example

structure Foo Baz {
  baz: String
}
